--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -2,4 +2,18 @@ p {
   text-overflow: ellipsis;
 }
 
+.cover{
+  object-fit: contain;
+  object-position: center;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  padding-top: auto;
+}
+
+
+
 
