Added icons to UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="col-xs-12">
   <ul>
-    <li><a routerLink="/productlist" routerLinkActive="active">ProductList</a></li>
-    <li><a routerLink="/cart" routerLinkActive="active">Cart</a> </li>
+    <li><a routerLink="/productlist" routerLinkActive="active"><i class="fa fa-shopping-bag text-secondary" aria-hidden="true"></i> ProductList</a></li>
+    <li><a routerLink="/cart" routerLinkActive="active"><i class="fa fa-shopping-cart text-secondary " aria-hidden="true"></i> Cart</a> </li>
+
   </ul>
 </nav>
 
