--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,13 @@
 <div class="container align-items-center justify-content-center">
 
-  <div class="row align-items-center justify-content-center bg-light">
+
+
+
+
+  <div class="row align-items-center justify-content-center ">
+    <div style="width:100%;height:600px;margin:10px auto;">
+      <image-slider [slides]="slides" ></image-slider>
+    </div>
     <div class="col-md-3" *ngFor="let product of products">
       <app-product [product]="product" (cartAdder)="addToCart($event)"></app-product>
     </div>
