--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="product  text-center mb-5 mr-3 ">
-  <a class="align-top" routerLink="/product-details"><img src="{{product.image}}" (click)="sendProductDetails()" class="cover pull-" width="150px" height="200px"/></a>
+  <a class="align-top" routerLink="/product-details"><img src="{{product.image}}" (click)="sendProductDetails()" class="cover round bg-white" width="100%" height="300px"/></a>
   <h6 class="text-center">{{product.title}}</h6>
   <hr>
   <!-- <p class="text-center">{{product.description}}</p> -->
