--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,69 +1,36 @@
-.active {
-  background-color: aliceblue;
-}
 
-.slider {
-  width: 800px;
-  height: 400px;
-  overflow: hidden;
-  position: relative;
-  background: #e6e6e6;
-  border: 20px solid #FFF;
-  margin-top: 20px;
-}
 
-.slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.arrow {
-  position: absolute;
-  z-index: 1002;
-  display: block;
-  top: 50%;
-  margin-top: -35px;
-  width: 36px;
-  height: 71px;
-  outline: none !important;
-  cursor: pointer;
-  border: none;
-}
-
-.arrow.prev {
-  opacity: 0.2;
-  left: 20px;
-
-  transition: 0.2s linear all;
-}
-
-.arrow.next {
-  opacity: 0.2;
-  right: 20px;
-
-  transition: 0.2s linear all;
-}
-
-.arrow.prev:hover {
-  opacity: 1;
-
-}
-
-.arrow.next:hover {
-  opacity: 1;
-
-}
 .svg {
   width:150px ;
-  height: 75px ;
+  height: 70px ;
 }
+
+
+
+.sidebar {
+  margin: 6px;
+  padding: 7px;
+  min-width: fit-content;
+  height: 80vh;
+  border: 1px solid #aaa;
+  background: #D3D3D3;
+
+}
+
+
+
+
 
 
 
 @media (max-width: 576px) {
   .svg {
-    
+    width:130px ;
+    height: 55px ;
+  }
+
+  .navbar-toggler-icon{
+    height: 25px;
   }
 }
 
