Implemented Toasts Globally

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,8 @@
-  <!-- CART ITEMS START -->
+    <!-- toasts -->
+    <ngbd-toast-global></ngbd-toast-global>
+    <!--  -->
+
+<!-- CART ITEMS START -->
 
 <div class="container h-100">
   <div class="row d-flex justify-content-center align-items-center h-100">
