--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,33 +1,27 @@
 <div class="container align-items-center justify-content-center">
+    <!-- toasts -->
+    <ngbd-toast-global></ngbd-toast-global>
+    <!--  -->
+
+  <image-slider [slides]="slides"></image-slider>
 
 
-<image-slider [slides]="slides"></image-slider>
-
-
-  <div class="row  justify-content-center mt-1">
-
-
-
-    <div class="col-12">
-      <mat-drawer-container class="example-container" autosize>
+      <mat-drawer-container class="example-container mt-2" autosize>
+        <button  mat-raised-button mat-button color="primary" (click)="drawer.toggle()">
+          Filter by
+        </button>
         <mat-drawer #drawer class="example-sidenav" mode="side">
           <h6 class="my-5">Dresses</h6>
         </mat-drawer>
 
-        <div class="example-sidenav-content">
-          <button  mat-raised-button mat-button color="primary" (click)="drawer.toggle()">
-            Filter by
-          </button>
-        </div>
 
+\
 
       <div class="row">
-        <div class="col-sm-3 col-4" *ngFor="let product of products">
-          <app-product [product]="product" (cartAdder)="addToCart($event)"></app-product>
+        <div class="products col-sm-4 col-6 col-md-3" *ngFor="let product of products">
+          <app-product [product]="product" (cartAdder)="addToCart($event);"></app-product>
         </div>
       </div>
-    </mat-drawer-container>
-    </div>
-
-
+      </mat-drawer-container>
 </div>
+
