--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,16 +1,3 @@
-.sidebar {
-    margin: 0px;
-    padding: 0px;
-    min-width: fit-content;
-    height: 100%;
-    border: 1px solid #aaa;
-    background: #D3D3D3;
-    border: 1px solid black;
-  }
-
-
-  .example-container {
-
-  }
-
-
+.mat-drawer-inner-container::-webkit-scrollbar {
+    display: none;
+}
