--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -8,6 +8,7 @@ p {
 }
 
 .product{
+
   margin-top: auto;
   padding-top: auto;
 }
@@ -16,16 +17,25 @@ p {
 }
 
 img {
+  width:100%;
+  height:300px;
   background-size: cover ;
   background-position: center;
 }
 
+.button {
+  margin-top: auto;
+}
+
+
+
 @media (max-width: 1250px) {
   img {
-    width: 100px;
+    width: 100%;
     height: 200px;
-    overflow: hidden;
   }
+
+
 }
 
 
