--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,13 +1,12 @@
 <div class="product  text-center mb-5 mr-3 ">
-  <a class="align-top" routerLink="/product-details"><img src="{{product.image}}" (click)="sendProductDetails()" class="cover round bg-white" width="100%" height="300px"/></a>
-  <h6 class="text-center">{{product.title}}</h6>
+  <a  routerLink="/product-details"><img src="{{product.image}}" (click)="sendProductDetails()" class="cover round bg-white" width="100%" height="300px"/></a>
+  <h6 class="text text-center">{{product.title}}</h6>
 
   <!-- <p class="text-center">{{product.description}}</p> -->
   <h5 class="text-center">{{product.price | currency}}</h5>
 
-
-  <div>
-    <button class="btn btn-dark" (click)="addToCart(product)">Add To Cart</button>
+  <div class="text-bottom">
+    <button class="button btn btn-dark align-top" (click)="addToCart(product)" >Add To Cart</button>
   </div>
 
 </div>
