Added Filter by Category functionality Closes #11

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
             <li>
                 <a class="nav-link mr-5" routerLink="/cart">Cart</a>
             </li>
+            <li>
+                <a class="nav-link ml-5" routerLink="/checkout">checkout</a>
+            </li>
         </ul>
     </div>
 </nav>
